# FIRA6B

./: .gitignore  B_FIRA.pgm  README.md  README.txt  W_FIRA.pgm  default.yaml  fira_map.pgm  fira_map.yaml  models.rar  readme.txt  settingProcedure.md  test.pgm  test.yaml  version number.txt
DE0_NANO_5th/docs/: MotorController_Statechart.vsd  Structure.ppt
DE0_NANO_5th_v2_0_170708/: DE0_NANO.qsf
DE0_NANO_5th_v2_0_170708/docs/: Structure.pptx  結構圖.vsd
DE0_NANO_6th_meacnum/: DE0_NANO.qsf  DE0_NANO.v  ShootControl_auto_stripped.stp  meacnum.map
DE0_NANO_6th_v1_6_170706/: CMD2Serial.stp  DE0_NANO.qsf  serial2CMD.stp  serial2CMD_auto_stripped.stp
DE0_NANO_6th_v1_6_170706/ip/: shootControl.v
DE0_NANO_6th_v2_0_170708/: DE0_NANO.qsf  DE0_NANO.v
DE0_NANO_6th_v2_0_170708/ip/: shootControl.v
DE0_NANO_6th_v2_1_170712/: DE0_NANO.qsf  serial2CMD_auto_stripped.stp
DE0_NANO_6th_v2_2_170807/: CMD2Serial_auto_stripped.stp  DE0_NANO.qsf  DE0_NANO.v  ShootControl.stp
DE0_NANO_6th_v2_2_170807/ip/: holdBall.v
DE0_NANO_6th_v2_3_170820/: DE0_NANO.qsf
DE0_NANO_6th_v9_1_170516/: DE0_NANO.qsf  readme.txt
DE0_NANO_6th_v9_doubleCheck_170321/: DE0_NANO.qsf  DE0_NANO.qws  DE0_NANO.v
DE0_NANO_6th_v9_doubleCheck_170321/ip/: shootControl.v
DE0_NANO_default/: DE0_NANO.qsf  DE0_NANO.v
DE0_NANO_default/demo_batch/: DE0_NANO.bat  DE0_NANO.sof
Localization_UI/: newLc.html  比對用.html
Passing_UI/: PassingChallenge.html
RegularUI/: strategy_ui.html
RegulerUI/: strategy_ui.html
interface/vision/Interface/: CMakeLists.txt
interface_ws/: Parameter.yaml  Parameter.yaml~  default.yaml  defult.yaml~
regular_UI/: strategy_ui.html
src/: CMakeLists.txt  Parameter.yaml  README.md  main_launch.launch
src/FIRA_Sim/ParticleFilter/: CMakeLists.txt  ParticleFilter.cpp  ParticleFilter.hpp
src/FIRA_Sim/movetest/: CMakeLists.txt  CMakeLists.txt~  imageWidget.cpp  imageWidget.hpp  main.cpp  qClient.cpp  qClient.hpp
src/FIRA_Sim/re_status/: CMakeLists.txt  Sphere.DAE  re_status.cc  re_status.world  re_status_world.launch
src/FIRA_Sim/re_status/srv/: ModelCommand.srv
src/motion/: CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt~  MotorControl.h  MotorControl.h.autosave  motion.cpp  package.xml  package.xml~
src/motion/Attack_motion/: CMakeLists.txt  base_control.cpp  base_control.h  motion.cpp  motion_nodeHandle.cpp  motion_nodeHandle.h
src/motion/Defend_motion/: .base_control.cpp.swp  .base_control.h.swp  .motion.cpp.swp  .motion_nodeHandle.cpp.swp  .motion_nodeHandle.h.swp  base_control.cpp  base_control.h
src/motion/Defend_motion_v6/: CMakeLists.txt
src/motion/Mecanum_motion/: CMakeLists.txt  base_control.cpp  base_control.h  crc_16.cpp  crc_16.h  crc_8.cpp  crc_8.h
src/motion/common/: motor_data.h
src/motion/test/: CMakeLists.txt  simulate_strategy.cpp
src/passing_challenge/strategy/: CMakeLists.txt  behavior.cpp  behavior.h  main.cpp  pathplan.cpp  pathplan.h  strategy_nodeHandle.cpp  strategy_nodeHandle.h
src/simulator/fira_sim/: CMakeLists.txt  CMakeLists.txt~  FIRA.world  FIRA.world~  FIRA_test_oneRobot.world  package.xml  robocup14_spl_field.world  使用手冊
src/simulator/fira_sim/FIRA_plugin/: CMakeLists.txt  CMakeLists.txt~  ContactPlugin.cc  ContactPlugin.hh  ContactPlugin.hh~  FIRA_world_plugin.cc  FIRA_world_plugin.hh  FIRA_world_plugin_ori.cc  SoccerPlugin.cc
src/simulator/fira_sim/FIRA_plugin/backup/: FIRA_robot_pub_plugin.cc  obj_status.cc
src/simulator/fira_sim/FIRA_plugin/msg/: ModelMsg.msg  RobotSpeedMsg.msg  ScoreMsg.msg
src/simulator/fira_sim/common/: CMakeLists.txt  SetGetFun.h
src/simulator/fira_sim/launch/: basic.launch  contact.world  fira_ateamRobot.launch  fira_ateamRobot.launch~  fira_cornerKick.launch  fira_oneRobot.launch  fira_simulator.launch  fira_simulator.launch~  fira_simulator_nogazebo.launch  fira_threeRobot.launch~  fira_twoRobot.launch  fira_twoRobot.launch~  robocup14_spl_field.world
src/simulator/fira_sim/referee/: CMakeLists.txt  connect_ros_window.cpp  connect_ros_window.hpp  main.cpp  qClient.cpp  qClient.hpp  referee_window.cpp  referee_window.hpp
src/simulator/fira_sim/referee/ui/: connect_ros_window.ui  referee_window.ui
src/simulator/fira_sim/srv/: WorldPluginSrv.srv
src/strategy/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  python_pkgs.md  setup.py
src/strategy/FIRA_strategy/: CMakeLists.txt  CMakeLists.txt~  FIRA_behavior.cpp  FIRA_behavior.h  FIRA_pathplan.cpp  FIRA_pathplan.cpp.j12191  FIRA_pathplan.cpp~  FIRA_pathplan.h  strategy.cpp  strategy_nodeHandle.cpp  strategy_nodeHandle.h
src/strategy/FIRA_teamStrategy/: CMakeLists.txt  FIRA_teamStrategy.cpp  FIRA_teamStrategy.h  main.cpp  teamStrategy_nodeHandle.cpp  teamStrategy_nodeHandle.h
src/strategy/LC_method2/: CMakeLists.txt  NodeHandle.cpp  main.cpp
src/strategy/LC_method3/: CMakeLists.txt  Env.hpp  Strategy.cpp  main.cpp
src/strategy/Localization_Challange/: CMakeLists.txt  Env.hpp  Initial.hpp  NodeHandle.cpp  NodeHandle.hpp  Strategy.cpp  Strategy.hpp  main.cpp
src/strategy/common/: BaseNode.h  CMakeLists.txt  CMakeLists.txt~  Env.h
src/strategy/config/: test.yaml
src/strategy/launch/: Robot.launch  strategy.launch  test1.launch~
src/strategy/launch/backup/: FIRA_1.launch  remote.launch  strategy.launch  strategy_opt.launch
src/strategy/msg/: strategy.msg
src/strategy/src/wrs_strategy/: wrs_strategy.py
src/vision/common/: CMakeLists.txt  qnode.hpp
src/vision/image_transport/: CMakeLists.txt
src/vision/objectdetection/: CMakeLists.txt  image_converter.cpp  image_converter.cpp~  image_converter.hpp  objectdetection.cpp
src/vision/whiteLine/: CMakeLists.txt  image_converter.cpp  image_converter.hpp  whiteLine.cpp
strategy_ws/src/vision/: CMakeLists.txt  prosilica_parameter~
strategy_ws/src/vision/Interface/: interface_window.cpp~
strategy_ws/src/vision/config/: New_interface_par.yaml  interface_par.yaml~  prosilica_parameter~
strategy_ws/src/vision/image_transport/: image_transport.cpp
strategy_ws/src/vision/objectdetection/: image_converter.cpp
vision_UI/: interface_web.html
(+390 files in other folders)
