<?xml version="1.0"?>
<package>
  <name>fira_sim</name>
  <version>0.2.5</version>
  <description>
     FIRA Simulator
  </description>
  <maintainer email="kbehouse@gmail.com">Kung-Han Chen</maintainer>
  <license>BSD</license>

  <author>TKU IC-Lab WheelRobot Team
	Kung-Han Chen,kbehouse@gmail.com

  </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libqt4-dev</run_depend>
</package>
